--- a/package.json
+++ b/package.json
@@ -23,6 +23,11 @@
     "concurrently": "^8.0.1"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.1.3",
+    "@nivo/pie": "^0.87.0",
+    "d3": "^7.9.0",
     "react-use": "^17.5.0"
   }
 }
