--- a/package.json
+++ b/package.json
@@ -27,7 +27,11 @@
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.1.3",
     "@nivo/pie": "^0.87.0",
+    "@react-three/drei": "^9.114.3",
+    "@react-three/fiber": "^8.17.10",
+    "@react-three/postprocessing": "^2.16.3",
     "d3": "^7.9.0",
-    "react-use": "^17.5.0"
+    "react-use": "^17.5.0",
+    "three": "^0.169.0"
   }
 }
