--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
 # Auto detect text files and perform LF normalization
 * text=auto
-# model/8model/* filter=lfs diff=lfs merge=lfs -text
-#*.safetensors filter=lfs diff=lfs merge=lfs -text
+model/8model/* filter=lfs diff=lfs merge=lfs -text
+*.safetensors filter=lfs diff=lfs merge=lfs -text
