--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.12",
+    "@react-three/drei": "^9.114.3",
+    "@react-three/fiber": "^8.17.10",
     "@reduxjs/toolkit": "^1.9.5",
     "framer-motion": "^10.18.0",
     "graphql": "^16.8.1",
@@ -20,7 +22,9 @@
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
-    "redux": "^4.2.1"
+    "react-toastify": "^10.0.6",
+    "redux": "^4.2.1",
+    "three": "^0.169.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
