--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.1.3",
+    "@nivo/bar": "^0.87.0",
     "@nivo/pie": "^0.87.0",
+    "@react-three/postprocessing": "^2.16.3",
     "d3": "^7.9.0",
     "react-use": "^17.5.0"
   }
